# rl-agent

./: .gitignore  Dockerfile  README.md  benchmark_runner.py  changes.md  inference.py  inference_7b_results.txt  inference_fixed_results.txt  inference_nemotron340b.txt  inference_nemotron51b.txt  inference_nemotron70b_results.txt  inference_nemotron_results.txt  models.py  openenv.yaml  pyproject.toml  smoke_test.py
scheme_env/: inference.py  leaderboard_20260404_123407.csv  models.py
scheme_env/logs_20260404_002849/: NousResearch_Hermes-2-Pro-Llama-3-8B.txt  Qwen_Qwen2.5-14B-Instruct.txt  Qwen_Qwen2.5-7B-Instruct.txt  Qwen_Qwen2.5-Coder-7B-Instruct.txt  deepseek-ai_DeepSeek-Coder-V2-Lite-Instruct.txt  microsoft_Phi-3-mini-4k-instruct.txt  microsoft_Phi-3-small-8k-instruct.txt
scheme_env/logs_20260404_123053/: NousResearch_Hermes-2-Pro-Llama-3-8B.txt  Qwen_Qwen2.5-7B-Instruct.txt  Qwen_Qwen2.5-Coder-7B-Instruct.txt  microsoft_Phi-3-mini-4k-instruct.txt
scheme_env/logs_20260404_123221/: NousResearch_Hermes-2-Pro-Llama-3-8B.txt  Qwen_Qwen2.5-7B-Instruct.txt  Qwen_Qwen2.5-Coder-7B-Instruct.txt  microsoft_Phi-3-mini-4k-instruct.txt
scheme_env/logs_20260404_123407/: NousResearch_Hermes-2-Pro-Llama-3-8B.txt  Qwen_Qwen2.5-7B-Instruct.txt  Qwen_Qwen2.5-Coder-7B-Instruct.txt  microsoft_Phi-3-mini-4k-instruct.txt
scheme_env/logs_20260404_124255/: NousResearch_Hermes-2-Pro-Llama-3-8B.txt  Qwen_Qwen2.5-7B-Instruct.txt  Qwen_Qwen2.5-Coder-7B-Instruct.txt  (+1 more)
server/: app.py  models.py  scheme_env_environment.py  schemes.py
tests/: conftest.py  test_scheme_eligibility.py
(+2 files in other folders)
